--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -98,7 +98,32 @@ main{
     color: #FF900E;
     font-weight: 700;
 }
+/*facts section*/
 
+.facts-card-container{
+    display: flex;
+    justify-content: space-around;
+    
+}
+.facts-card-container .card{
+    border-radius: 9px;
+    border: 1px solid #FF900E; 
+    text-align:center; 
+    padding: 30px;
+   
+}
+.facts-card-container .card-title {
+   font-weight: 600;
+   font-size: 1.25rem;
+   margin-top: 5px;
+
+}
+.facts-card-container .card-stats{
+    color:  #424242;
+    font-size: 2.8rem;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
 
 
 
