--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 
+
 /* shared styles */
+
 *{
   font-family: "Work Sans", sans-serif;
 
@@ -18,6 +20,8 @@
 }
 .text-light-gray{
     color: #727272;
+    font-size: 15px;
+   
 
 }
 .section-title{
@@ -92,12 +96,68 @@ main{
     font-size: 2.8rem;
 }
 .teams-title .quick-list{
+    color: #727272;
     font-weight: 500;
 }
 .teams-title .text-features{
     color: #FF900E;
     font-weight: 700;
 }
+
+/*feature section styles*/
+
+.features{
+    margin-top: 90px;
+    display: flex;
+    gap:100px;
+}
+.features .feature-title{
+    border-left: 4px solid #FF900E;
+    padding-left: 10px;
+}
+.feature-content .card{
+    padding: 15px;
+    width: 470px;
+    height: 90px;
+    margin-bottom: 15px;
+    border-radius: 8px;
+    background: #FFF;
+    box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06);
+     
+}
+.card h5{
+   margin-top: 0px;
+  
+}
+.feature-img img{
+    width:500px;
+    height: 650px;
+    margin-right:350px ;
+    border-radius: 8px;
+}
+.ten-years-badge{
+    border-radius: 8px;
+    background: #FF900E;
+    color: #FFF;
+    width:230px ;
+    height: 100px;
+    padding: 20px;
+    text-align: center;
+    position: relative;
+    bottom: 70px;
+    right: 80px;
+
+}
+.ten-years-badge h2{
+    font-size: 3rem;
+    margin: 0;
+}
+.ten-years-badge p{
+    font-size: 1.2rem;
+    margin: 0;
+    
+}
+
 /*facts section*/
 
 .facts-card-container{
@@ -124,6 +184,40 @@ main{
     margin-top: 10px;
     margin-bottom: 10px;
 }
+.sponsors{
+    text-align: center;
+}
+.sponsors-img-container{
+    display: flex;
+    justify-content:space-evenly;
+    align-items: center;
+    margin-top: 50px;
+    gap: 40px;
+}
+.sponsors-img-container img{
+    width: 165px;
+}
+/*footer style*/
+ 
+footer{
+    width: 1000px;
+    height: 80px;
+    margin-bottom:100px;
+    margin-left: 240px;
+    background: #FFF4E7;
+    
+ }
+ footer h6{
+    color: #424242;
+    font-size: 11px;
+    font-weight: 400;
+    text-align: center;
+    padding-top: 30px;
+ }
+
+
+
+
 
 
 
@@ -138,17 +232,33 @@ main{
         padding: 20px;
     }
     nav ,
-    .teams-container
+    .teams-container,
+    .features,
+    .facts-card-container,
+    .sponsors-img-container
     {
         flex-direction: column;
        
     }
+    .feature-content .card{
+        width: auto;
+    }
+    .feature-img img{
+        width: 400px;
+        margin-right: 0;
+    }
+    .ten-years-badge{
+       margin-left:80px;
+    }
     .teams-img-container{
         grid-template-columns: 1fr;
     }
-    .teams-content{
+    .teams-content,.facts-card-container {
         padding-left:20px ;
         padding-right: 20px;
+    }
+    .facts-card-container{
+        gap: 20px;
     }
 }
 /*tablet or medium devices*/
@@ -157,8 +267,16 @@ main{
     header{
         padding: 50px;
     }
-    nav, .teams-container{
+    .ten-years-badge{
+        margin-left:80px;
+    } 
+    nav, 
+    .teams-container,
+    .features,
+    .sponsors-img-container
+    {
         flex-direction: column;
+
     }
-}
+}  
 
